﻿v 1.1
BUGFIX: lib.range previously failed float tests are now running
BUGFIX: database tests used to run with the default DB if available.
BUGIFX: lib.throwError had a bug calling just QS but should call page.QS
BUGFIX: lib.detectComponent didnt work due to a wrong variable name
BUGFIX: str.format used to have a bug when arguments contained a placeholder string
- added error handling in db.insert and db.update to get more information about an error if one happens
- updated documentor:
	- support for lists added and code blocks (<code></code>) added, because docs looked a little messed up sometimes. 
		elements supporing lists and code blocks include:
		@CDESCRIPTION, @SDESCRIPTION, @DESCRIPTION, @PARAM, @RETURN and public properties.
		A list item must be on one line, and start with "- "
		- Code examples are now better to read within the documentation
	- due to this change some docs have been updated for better readability
	- removed the class path in the documentation. it made no real sense to display this. 
	- default methods has not been supported yet. are marked in "italic" now
	- BUGFIX: methods, properties, etc where case sensitive and it didnt recognize e.g. "Public Function" or "pUblic Property"
	- BUGFIX: byVal parameters have been not correctly detected.
	- removes square brackets on a methodname (reserved words)
	- parameter lists have a "," now between every parameter
	- use <em></em> to emphasize code words (e.g. methodnames, etc.). EMPTY is emphasized automatically
	- @ALIAS keyword added for methods.
	- options are detected in the documentation
- added db.getRS() and db.getUnlockedRS(). those should be used instead of db.getRecordset and db.getUnlockedRecordset
	because they can be used with parameters which will be sql-safe. e.g. db.getRS("SELECT * FROM user WHERE id = {0}", 1)
- added some more error checks to the db class
- added a Logger class which allows you to log all kind of things on 4 levels (debug, info, warn and error)